# ChangeLog for dev-java/commons-daemon
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-daemon/ChangeLog,v 1.18 2006/07/04 19:00:27 corsair Exp $

  04 Jul 2006; Markus Rothe <corsair@gentoo.org>
  commons-daemon-1.0.1.ebuild:
  Stable on ppc64; bug #138759

  04 Jul 2006; Jon Hood <squinky86@gentoo.org> commons-daemon-1.0.1.ebuild:
  Stable on amd64, bug #138759.

  02 Jul 2006; Petteri Räty <betelgeuse@gentoo.org>
  commons-daemon-1.0.ebuild, commons-daemon-1.0.1.ebuild:
  Removed useless dependencies on virtual/libc.

  12 May 2006; Petteri Räty <betelgeuse@gentoo.org>
  +files/1.0.1-as-needed.patch, commons-daemon-1.0.1.ebuild:
  Added patch from bug #132563 to fix compilation with -Wl,--as-needed. Thanks
  to TGL <degrenier@easyconnect.fr>.

*commons-daemon-1.0.1 (07 Jun 2005)

  07 Jun 2005; Jan Brinkmann <luckyduck@gentoo.org>
  +commons-daemon-1.0.1.ebuild:
  New upstream release, fixes #95049. Introduced support for the examples and
  the source useflag.

  29 May 2005; Markus Rothe <corsair@gentoo.org> commons-daemon-1.0.ebuild:
  Stable on ppc64

  14 May 2005; Martin Holzer <mholzer@gentoo.org> commons-daemon-1.0.ebuild:
  amd64 stable

  08 May 2005; Jason Wever <weeve@gentoo.org> commons-daemon-1.0.ebuild:
  Added ~sparc keyword.

  12 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org> commons-daemon-1.0.ebuild:
  added ~ppc to KEYWORDS

  09 Apr 2005; Markus Rothe <corsair@gentoo.org> commons-daemon-1.0.ebuild:
  Added ~ppc64 to KEYWORDS

  20 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> commons-daemon-1.0.ebuild:
  added missing jikes dependency. see #78819.

  12 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> commons-daemon-1.0.ebuild:
  slightly modified ebuild as recommended by Dad <dan@intuitivelyobvious.net> to
  make package amd64 compatible. added ~amd64 to KEYWORDS. fixes bug #67323.

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org> commons-daemon-1.0.ebuild: