@@ -1,0 +1,3 @@
+MD5 df3eb5aafa53ca530843a09d40b8a1c0 daemon-1.0.1.tar.gz 301023
+RMD160 b77ffd3dbc40d18d867afd62015ba1aa05bd9c65 daemon-1.0.1.tar.gz 301023
+SHA256 177107b8d99cabdbcda58cec284a2e2ccb5063113cc1fdb1b672754d4652848c daemon-1.0.1.tar.gz 301023
