@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/commons-daemon
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-daemon/ChangeLog,v 1.18 2006/07/04 19:00:27 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-daemon/ChangeLog,v 1.19 2006/07/22 22:32:40 nelchael Exp $
+
+*commons-daemon-1.0.1-r1 (22 Jul 2006)
+
+  22 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org>
+  +commons-daemon-1.0.1-r1.ebuild:
+  Migrated to Generation 2.
 
   04 Jul 2006; Markus Rothe <corsair@gentoo.org>
   commons-daemon-1.0.1.ebuild:
